# swmmanywhere_paper

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: experimenter.py  mappings.py  paper_graphfcns.py  perform_sa.py  plot_distributions.py  plot_side_heatmap.py  plotting.py  prepare_subselect_batch.py  submit_newenv.sh  subselect.py  utilities.py
swmmanywhere_paper/: __init__.py  experimenter.py  fig5.py  fig6.py  fig78.py  mappings.py  perform_sa.py  plot_distributions.py  plot_side_heatmap.py  plotting.py  prepare_subselect_batch.py  schema.yml  subselect.py  utilities.py
swmmanywhere_paper/plots/: fig4.py  fig5.py  fig6.py  fig78.py
tests/: test_experimenter.py  test_figs.py  test_imports.py  test_plotting.py
tests/test_data/bellinge_G60F61Y_G60F390_l1/: config.yml
tests/test_data/bellinge_G60F61Y_G60F390_l1/bbox_1/: bounding_box_info.json
tests/test_data/bellinge_G60F61Y_G60F390_l1/real/: graph.json  real_bbox.json  real_results.parquet  subcatchments.geojson
tests/test_data/bellinge_G62F060_G61F180_l1/: config.yml
tests/test_data/bellinge_G62F060_G61F180_l1/bbox_1/: bounding_box_info.json
tests/test_data/bellinge_G62F060_G61F180_l1/real/: graph.json  real_bbox.json  real_results.parquet  subcatchments.geojson
tests/test_data/bellinge_G72F550_G72F010_l1/: config.yml
tests/test_data/bellinge_G72F550_G72F010_l1/real/: graph.json  (+3 more)
tests/test_data/bellinge_G72F800_G72F050_l1/: config.yml
tests/test_data/bellinge_G73F000_G72F120_l1/: config.yml
tests/test_data/bellinge_G74F150_G74F140_l1/: config.yml
tests/test_data/bellinge_G80F390_G80F380_l1/: config.yml
tests/test_data/cranbrook_node_1439.1/: config.yml
(+5025 files in other folders)
